--- a/index.html
+++ b/index.html
@@ -327,6 +327,12 @@
     <p>Duration: 01 March 2024 – 31 March 2024</p>
     <p>Role: Built responsive web pages using HTML,CSS,JS and gaining hands-on experience with real-world projects and development tools.</p>
   </div>
+  <div class="internship-item">
+    <h3>Web Development in Angular</h3>
+    <p>Company: Chainsys India Private Limited</p>
+    <p>Duration: 19 June 2025 – 18 July 2025</p>
+    <p>Role: Developed an online polling and voting system using Angular with typescript and along with couchDB</p>
+  </div>
 </section>
 <section id="projects"> 
 <h2>Projects</h2>
@@ -334,6 +340,11 @@
 <p><h3>GlowUI</h3></p>
 <p>Technology used:Figma</p>
 <p>Designed a skincare-focused mobile app that personalizes routines, enhances user engagement, and promotes wellness.</p>
+</div>
+<div class="project-item">
+<p><h3>Online Polling and Voting</h3></p>
+<p>Technology used: Angular(typescript) and CouchDB</p>
+<p>Developed an online voting system for an organization where it allows the admin to poll and users to vote.It also works with role based poll visibility</p>
 </div>
 <div class="project-item">
 <p><h3>Smart Heartrate Monitoring System</h3></p>
